fix: log warning and establish more consistent log.