@@ -41,6 +41,7 @@
 			<artifactId>poi</artifactId>
 			<version>5.2.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
@@ -64,6 +65,12 @@
 			<artifactId>javafx-fxml</artifactId>
 			<version>17</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.20.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -73,12 +80,6 @@
 				<version>0.0.8</version>
 				<configuration>
 					<mainClass>br.ucsal.certificateGenerator.presentation.Main</mainClass>
-					<options>
-						<option>--module-path</option>
-						<option>${java.home}/../lib</option>
-						<option>--add-modules</option>
-						<option>javafx.controls,javafx.fxml</option>
-					</options>
 				</configuration>
 			</plugin>
 		</plugins>
